# fluent_mcp

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  instructions.md  pyproject.toml  spec.template.md
.cursor/rules/: implementation_patterns.mdc  reflection_loop.mdc  reflection_templates.mdc  standard_tools.mdc  template_examples.mdc
.github/workflows/: ci.yml
docs/: api_reference.md  architecture.md  budget_management.md  creating_tools.md  embedded_reasoning.md  getting_started.md  rate_limiting.md  reflection_system.md  running_a_server.md  self_improving_systems.md  troubleshooting.md
examples/: embedded_reasoning_example.py  external_tools_example.py  prompt_loader_example.py  prompt_tools_example.py  reasoning_external_tool_example.py  reflection_example.py  tool_registry_example.py
examples/prompts/: math_tools.md  multi_tools.md  weather_tools.md
fluent_mcp/: __init__.py  cli.py  pyproject.toml  scaffolder.py
fluent_mcp/core/: __init__.py  budget.py  budget_tools.py  error_handling.py  llm_client.py  prompt_loader.py  reflection.py  reflection_loader.py  server.py  tool_execution.py  tool_registry.py
fluent_mcp/core/templates/reflection/: base_reflection.md  custom_reflection.md  tool_use.md
fluent_mcp/core/templates/reflection/tools/: database_reflection.md  file_operations_reflection.md  gather_thoughts.md  job_complete.md  web_research_job_complete.md
fluent_mcp/examples/: reflection_example.py  structured_reflection_example.py
tests/: README.md  __init__.py  run_all_tests.py  test_budget_management.py  test_embedded_reasoning.py  test_end_to_end_server.py  test_external_tools.py  test_interactive.py  test_llm_client.py  test_prompt_loader.py  test_prompt_tools.py  test_prompt_tools_edge_cases.py  test_prompt_tools_integration.py  test_reflection.py  test_reflection_integration.py  test_reflection_state.py  test_scaffolder.py  test_server_run.py  test_tool_registry.py
