[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluent_mcp"
version = "0.1.0"
description = "Fluent MCP - A modern package for MCP servers"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "mcp[cli]>=1.2.1",  # Latest stable release as of Jan 18, 2025
    "python-dotenv>=1.0.0",  # Latest stable release as of Jan 2024
    "openai>=1.65.5",  # Latest stable release as of Mar 9, 2025
    "pyyaml>=6.0",  # Latest stable release as of Mar 2025
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",  # Latest stable release as of Mar 2, 2025
    "pytest-cov>=4.0.0",  # Latest stable release as of Mar 2025
    "black>=23.0.0",  # Latest stable release as of Mar 2025
    "isort>=5.12.0",  # Latest stable release as of Mar 2025
    "flake8>=6.0.0",  # Latest stable release as of Mar 2025
]

[project.scripts]
fluent-mcp = "fluent_mcp.cli:main"

[tool.setuptools]
packages = ["fluent_mcp"]
